[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prometheus = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4"
thread-id = "3.3.0"
gettid = "0.1.1"
urlencoding = "2.1.0"
rand = "0.8.5"

[build-dependencies]
anyhow = "1.0"
vergen = "6"